Refactor, removing lot of unused things like inport's an id's. As suggested by code pro.